# fastapi-workshop02

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  testes.py
.github/workflows/: main.yml
