[tool.poetry]
name = "jornada-de-dados-workshop02"
version = "0.1.0"
description = ""
authors = ["Thyago Manhaes <thyago.ufs@gmail.com>"]
readme = "README.md"
packages = [{ include = "jornada-de-dados-workshop02" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
taskipy = "^1.13.0"
pytest = "^8.3.2"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]

run = "uvicorn main:app --reload"
test = "pytest -v testes.py"
kill = "kill -9 $(lsof -t -i:8000)"
